istio/serviceb/deployment/namespace.yaml
#create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: serviceb
  labels:
    istio-injection: enabled
