istio/serviceb/deployment/kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
  labels:
    app: serviceb
spec:
  replicas: 2
  template:
    metadata:
      name: serviceb
      labels:
        app: serviceb
    spec:
      containers:
        - name: serviceb
          image: myrgmyacr.azurecr.io/serviceb
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 32Mi
      restartPolicy: Always
  selector:
    matchLabels:
      app: serviceb
---
apiVersion: v1
kind: Service
metadata:
  name: serviceb
spec:
  selector:
    app: serviceb
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
