istio/serviceb/deployment/istio.yaml
#create virtual service for serviceb
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serviceb
spec:
  hosts:
    - serviceb.serviceb.svc.cluster.local
  http:
    - route:
        - destination:
            host: serviceb.serviceb.svc.cluster.local
            subset: v2
---
# create destination rule for serviceb
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: serviceb
spec:
  host: serviceb.serviceb.svc.cluster.local
  subsets:
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          consistentHash:
            useSourceIp: true
        tls:
          mode: ISTIO_MUTUAL
---
